# reflect-on-me

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  __init__.py  build.py  config.json  description.html  pyproject.toml  reflectOnMee.py
.github/workflows/: ci.yml
scripts/: release.py
tests/: conftest.py  test_addon_smoke.py  test_reflect_on_mee.py
